--- a/Quiz App/Main.storyboard
+++ b/Quiz App/Main.storyboard
@@ -18,8 +18,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fal-oS-tEg">
                                 <rect key="frame" x="20" y="48" width="374" height="814"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2P-N9-OZH" userLabel="Score">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="91.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSI-li-mhO">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="614"/>
+                                        <rect key="frame" x="0.0" y="101.5" width="374" height="512.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -78,6 +84,7 @@
                         <outlet property="falseButton" destination="tbn-vQ-GyC" id="y3o-Qa-dwu"/>
                         <outlet property="progressBar" destination="TXm-qh-7Xg" id="fmc-Qa-ydZ"/>
                         <outlet property="questionLabel" destination="rSI-li-mhO" id="Pan-Dx-b3t"/>
+                        <outlet property="scoreLabel" destination="v2P-N9-OZH" id="DbH-dc-E1d"/>
                         <outlet property="trueButton" destination="oVw-Hl-IRe" id="esJ-8L-064"/>
                     </connections>
                 </viewController>
